record -> class + @Builder